# parakh

./: .gitignore  README.md
.github/workflows/: ci.yml
db/: README.md
db/migrations/: 0001_core.sql  0002_billing.sql
db/seed/: 0001_sources.sql
docs/: M0.md  M1-embedding-spike.md  M1-precision.md
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/app/mixed-script-test/: page.tsx
web/app/styleguide/: page.tsx
web/components/: BiasBar.tsx  BlindspotBadge.tsx  EvidencePopover.tsx  FactCheckChip.tsx  FactualityDot.tsx  LanguageToggle.tsx  OwnershipCard.tsx  ParallaxMark.tsx  RatingChip.tsx  StoryCard.tsx  ThemeToggle.tsx
web/lib/: buckets.ts
web/styles/: tokens.css
worker/: README.md  pyproject.toml
worker/app/: __init__.py  config.py  db.py  ingest.py  main.py  scheduler.py
worker/app/eval/: __init__.py  build_realset.py  gold_realset.jsonl  gold_stories.jsonl  metrics.py  run_precision.py
worker/app/pipeline/: __init__.py  cluster.py  dedupe.py  embed.py  fetch.py  langdetect.py  normalize.py  story_update.py  types.py
worker/app/spike/: __init__.py  bilingual_eval.py  eval_pairs.json
worker/tests/: conftest.py  test_cluster.py  test_db_integration.py  test_embed.py  test_eval_runner.py  test_fetch.py  test_metrics.py  test_normalize.py  test_spike.py  test_story_stats.py
worker/tests/fixtures/: sample_feed.xml
