[project]
name = "parakh-worker"
version = "0.0.0"
description = "Parakh ingestion / ML worker — fetch, dedupe, lang-detect, embed, cluster"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "feedparser>=6.0",
  "apscheduler>=3.10",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
]
# Heavy ML deps land in M1 (embedding spike): sentence-transformers, psycopg,
# pgvector, datasketch (MinHash), lingua-language-detector.
ml = [
  "sentence-transformers>=3.0",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "datasketch>=1.6",
  "lingua-language-detector>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.pipeline"]
